--- a/Week2-1.ipynb
+++ b/Week2-1.ipynb
@@ -26,9 +26,7 @@
     "\n",
     "So far, you have written one line of python code at a time. Each line of code does one thing. If you want to do more than one thing, you write multiple lines of code one after the other, and they **execute** (or run) in order. But what if you want to execute one or more lines of code only if a particular condition holds? For example, what if you have a variable ```text``` (assigned to a string) and you want to print out the value of ```text``` only if it is equal to \"iPhone\"? \n",
     "\n",
-    "Today we will learn about two types of flow control statement:\n",
-    "* conditionals\n",
-    "* loops\n"
+    "Today we will learn about one type of flow control statement: conditionals\n"
    ]
   },
   {
@@ -501,405 +499,6 @@
    },
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "# Loops"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "subslide"
-    },
-    "tags": []
-   },
-   "source": [
-    "What if you want to execute one or more lines of code more often? For example, what if you have a variable ```text``` (assigned to a string) and a variable ```times``` (assigned to an integer) and you want to print the value of ```text``` the value of ```times``` times?\n",
-    "\n",
-    "We can control how often code gets executed using **flow control statements** called **iteration statements** (or **loops**). "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "## Types of Loop\n",
-    "\n",
-    "|Statement|Means|Condition for execution|\n",
-    "|---|---|---|\n",
-    "|`while`|while|while condition is true|\n",
-    "|`for`|for|execute in a loop for this many times|"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "## `while` Loop Statements"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "subslide"
-    },
-    "tags": []
-   },
-   "source": [
-    "\n",
-    "Sometimes we want a particular action to loop (or repeat) until some condition is met. We can accomplish this with a `while` loop statement that takes the form:\n",
-    "\n",
-    "`while condition is True:` <br />\n",
-    "&nbsp; &nbsp; &nbsp; &nbsp;`take this action`\n",
-    "\n",
-    "After the code block is executed, the program loops back to check and see if the `while` loop condition has changed from **True** to **False**. The code block stops looping when the condition becomes **False**.\n",
-    "\n",
-    "Let's write code to be a really annoying friend. In the code cell below, copy the code from the `if` statement section. Then, surround it with a `while` statement so that the code keeps asking if the user is having a good day until they say 'Yes' (or 'yes').\n",
-    "\n",
-    "Watch out for indentation!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Keep asking if you are having a good day until you say 'Yes' (or 'yes')\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "notes"
-    },
-    "tags": []
-   },
-   "source": [
-    "With a `while` loop, if the condition is never true then the action is never taken. If you have programmed in Java, you might know about a `do/while` loop, which always executes the action at least once. There is no `do/while` loop built into python."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "## Stopping Accidental Infinite Loops"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "subslide"
-    },
-    "tags": []
-   },
-   "source": [
-    "When using a `while` loop, it is possible to accidentally create an infinite loop that never ends. This happens because the `while` condition *never* becomes **False**. \n",
-    "\n",
-    "If you accidentally write code that infinitely repeats, you can stop the execution by selecting **Interrupt** from the **Kernel** menu. \n",
-    "\n",
-    "If you can't figure out where the code has \"gone wrong\", in Visual Studio you can use the \"Run By Line\" functionality to go slowly through and check things."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Run this infinite loop then interrupt the kernel\n",
-    "\n",
-    "# Importing the sleep module so we can slow down our infinite loop\n",
-    "from time import sleep \n",
-    "\n",
-    "while True:\n",
-    "    print('Oh noes!')\n",
-    "    # A one second pause so our infinite loop doesn't make the notebook gigantic!\n",
-    "    sleep(5) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    },
-    "tags": []
-   },
-   "source": [
-    "If you didn't already, try clearing the output from the infinite loop code cell!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "## A Repeating `while` Loop\n",
-    "\n",
-    "In the program above, the `while` loop checked to see if the user was having a good day. We could also use a `while` loop to repeat a code block a particular number of times. Look at the example below."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# A loop program that prints out 0, 1, 2\n",
-    "i = 0 # A variable to help count how many loops have been completed\n",
-    "\n",
-    "while i < 3:\n",
-    "    print(i)\n",
-    "    i = i + 1 # We can also write an equivalent shortcut: i += 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    },
-    "tags": []
-   },
-   "source": [
-    "Although you can do this using a `while` loop, a `for` loop is more \"idiomatic\". "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "## `for` Loop Statements with a `range()` Function"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "source": [
-    "An abbreviated way to write a `while` loop that repeats a specified number of times is using a `for` loop with a `range()` function. This loop takes the form:\n",
-    "\n",
-    "`for i in range(j):` <br />\n",
-    "&nbsp; &nbsp; &nbsp; &nbsp;`take this action`\n",
-    "    \n",
-    "where 'j' is a variable whose value is the number of times you want the code block to be executed, and `i` is a variable repeatedly assigned to the current value of `j`. The `range()` function gives a mathematical range from 0 to `j`. The starting value of `i` is 0. After each loop, `i` increases by one until it reaches `j`. The loop then stops. \n",
-    "\n",
-    "The variable names `i` and `j` are not very informative. Using a different name may make the purpose of your code clearer to readers."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# A `for` loop that prints the value of the current iteration, here called `i`. \n",
-    "for i in range(3):\n",
-    "    print(i)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "subslide"
-    },
-    "tags": []
-   },
-   "source": [
-    "Try your hand at a repeating loop. Copy the code from the `while` section above, and replace the `while` loop with a `for` loop so that the \"are you having a good day?\" question gets asked five times."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# A 'for' loop that askes 'Are you having a good day?' five times\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "## `Continue` and `Break` Statements"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "subslide"
-    },
-    "tags": []
-   },
-   "source": [
-    "\n",
-    "`while` loops and `for` loops can also use `continue` and `break` statements to affect flow control. \n",
-    "* A `continue` statement immediately restarts the loop, skipping any remaining code in the current code block.\n",
-    "* A `break` statement immediately exits the loop.\n",
-    "\n",
-    "In the code cell below, copy the code from the `while` statement code cell. Change the `while` conditional expression to be `True`. Use `continue` and/or `break` to achieve the same behavior as the original `while` loop."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Ask whether the user is having a good day, until they say 'Yes' (or 'yes'), using while, continue and break\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "# Exception Handling with `try` and `except`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "subslide"
-    },
-    "tags": []
-   },
-   "source": [
-    "Do you hate exceptions?\n",
-    "\n",
-    "When running code that may create an error, we can use `try` and `except` statements to stop a program from making (\"throwing\") an exception."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Try running the first code block, if there's an error then run the `except` code\n",
-    "\n",
-    "try:\n",
-    "    user_number = input('Please enter a whole number: ')\n",
-    "    user_number = int(user_number)\n",
-    "    print('Thank you for entering a whole number.')\n",
-    "\n",
-    "except:\n",
-    "    print('That is not a whole number.')\n"
-   ]
   }
  ],
  "metadata": {
