--- a/Week2-3.ipynb
+++ b/Week2-3.ipynb
@@ -20,13 +20,7 @@
     "| comparison operator  |            |      | \n",
     "| boolean operator   |            |      | \n",
     "| conditional statement   |            |     | \n",
-    "| loop  |            |     | \n",
-    "| list  |            |     | \n",
-    "| index   |            |     | \n",
-    "| slice   |            |     | \n",
-    "| list operator  |            |     | \n",
-    "| list function  |            |     | \n",
-    "| list method  |            |     | "
+    "| loop  |            |     | "
    ]
   },
   {
@@ -41,25 +35,23 @@
    "source": [
     "Question 2: *For each of these operators, for each of the python data types we know, can it take them as operands? (Assume both operands are the same type.)*\n",
     "\n",
-    "| Operator | Int/Float | String | Boolean | List |\n",
-    "| -------  | --------- | ------ | ------- | ----- |\n",
-    "| +\t|         |       |           |   |\n",
-    "| -\t|         |       |           |   |\n",
-    "| *\t|         |       |           |   |\n",
-    "| /\t|         |       |           |   |\n",
-    "| **\t|         |       |           |   |\n",
-    "| % |         |       |           |   |\n",
-    "| == |         |       |           |   |\n",
-    "| != |         |       |           |   |\n",
-    "| > |         |       |           |   |\n",
-    "| < |         |       |           |   |\n",
-    "| >= |         |       |           |   |\n",
-    "| <= |         |       |           |   |\n",
-    "| and |         |       |           |   |\n",
-    "| or |         |       |           |   |\n",
-    "| not |         |       |           |   |\n",
-    "| in |         |       |           |   |\n",
-    "| not in |         |       |           |   |"
+    "| Operator | Int/Float | String | Boolean | \n",
+    "| -------  | --------- | ------ | ------- | \n",
+    "| +\t|         |       |           | \n",
+    "| -\t|         |       |           | \n",
+    "| *\t|         |       |           |   \n",
+    "| /\t|         |       |           |   \n",
+    "| **\t|         |       |           |   \n",
+    "| % |         |       |           |   \n",
+    "| == |         |       |           |   \n",
+    "| != |         |       |           |   \n",
+    "| > |         |       |           |   \n",
+    "| < |         |       |           |   \n",
+    "| >= |         |       |           |   \n",
+    "| <= |         |       |           |   \n",
+    "| and |         |       |           |   \n",
+    "| or |         |       |           |   \n",
+    "| not |         |       |           |   "
    ]
   },
   {
@@ -74,8 +66,7 @@
    "source": [
     "Question 3: *For each of the data types listed below, list at least three functions that can be applied to that data type.*\n",
     "\n",
-    "* string: \n",
-    "* list: "
+    "* string: "
    ]
   },
   {
@@ -91,42 +82,7 @@
     "Question 4: *List some common flow control statements.*\n",
     "\n",
     "* first one\n",
-    "* second one\n",
-    "* third one\n",
-    "* fourth one\n",
-    "* fifth one"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "source": [
-    "Question 5: *List some common list methods.*\n",
-    "\n",
-    "* first one\n",
-    "* second one\n",
-    "* third one\n",
-    "* fourth one\n",
-    "* fifth one"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "source": [
-    "Question 6: *In python, what do we use to help us avoid throwing exceptions?*"
+    "* second one"
    ]
   },
   {
@@ -197,52 +153,6 @@
     "# Build on Question 9\n",
     "\n",
     "# If the user enters an age that is not a number or unrealistic, prompt for a new age (hint: while)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "source": [
-    "# Bonus! \n",
-    "\n",
-    "If you have a list (or any data type that has methods) to find methods that you can use with it, create one, then type `.` and then *pause*."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Make a list\n",
-    "my_list = [1, 2, 3, 4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Find list methods\n"
    ]
   },
   {
